<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".EditarContaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNomeCategoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/category_name" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salve" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDespesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense" />

    <EditText
        android:id="@+id/editTextDespesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_expense_name" />

    <TextView
        android:id="@+id/textViewValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value" />

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_value"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewVencimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_maturity" />

    <EditText
        android:id="@+id/editTextVencimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/placeholder_date_maturity"
        android:padding="8dp" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/confirmation" />

    <ListView
        android:id="@+id/listViewDespesas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

</LinearLayout>
